--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -58,6 +58,8 @@
         "class-methods-use-this": "off",
         "lines-between-class-members": "off",
         "no-return-assign": "off",
+        "no-undefined": "off",
+        "no-null": "off",
         "no-param-reassign": ["error", { "props": false }],
         "no-plusplus": ["off"],
         "@typescript-eslint/no-unused-vars": ["error", { "argsIgnorePattern": "^_" }],
